Fixed few layout issues.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,25 +14,26 @@ body {
 
 #map_container {
 	position: relative;
-	top: -3.8em;
+	top: -1.5em;
 	background: blue;
 	z-index: 0;
+	height: 100vh;
 }
 
 #show_fire_hydrants {
-	position: relative;
+	position: absolute;
 	z-index: 1;
-	top: 1.5em;
+	top: 6.5em;
 	right: -4.5em;
 	float: right;
 }
 
 #fire_hydrants_container {
-	position: relative;
+	position: absolute;
 	z-index: 1;
 	height: 45em;
 	background: gray;
 	float: right;
-	top: 4.5em;
+	top: 9.5em;
 	right: -8.5em;
 }
